--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This is still a WIP, but this app *will* allow an admin to create a Secret Santa
+This is still a WIP, but this app *will* allow users to create a Secret Santa
 event and notify participants via email, SMS, etc.
